fixed spacing

--- a/src/app/bcard-content/bcard-content.component.css
+++ b/src/app/bcard-content/bcard-content.component.css
@@ -55,7 +55,7 @@ CONTENT section
    position: fixed;
    top: 20%;
    left: 5%;
-   width: 85%;
+   width: 90%;
    background-color: white;
    margin: 0;
    padding: 5%;
